<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/SiteDetailTitle"
            android:text="@string/label_site_name"/>

        <EditText
            android:id="@+id/edit_site_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="site title"/>

        <TextView
            style="@style/SiteDetailTitle"
            android:text="@string/label_login_id"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_login_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="account name"/>

        </LinearLayout>

        <TextView
            style="@style/SiteDetailTitle"
            android:text="@string/label_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="account pass"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/btn_reveal_password"
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:layout_gravity="right|top"
                    android:layout_marginRight="5dp"
                    android:background="@android:drawable/ic_menu_view"/>

            </FrameLayout>

        </LinearLayout>

        <TextView
            style="@style/SiteDetailTitle"
            android:text="@string/label_url"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="http(s)://www・・・"/>

        </LinearLayout>

        <TextView
            style="@style/SiteDetailTitle"
            android:text="@string/label_notes"/>

        <EditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="memo"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit_site_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/btn_label_cancel"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btn_edit_site_complete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/btn_label_create"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>